--- a/notebooks/Baseline_computation.ipynb
+++ b/notebooks/Baseline_computation.ipynb
@@ -1468,7 +1468,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit ('shims')",
    "language": "python",
    "name": "python3"
   },
@@ -1525,6 +1525,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2ab62af8896b2d97e50e5f41082653da1e00418fd91249c145dbcf05812a8970"
+   }
   }
  },
  "nbformat": 4,
