--- a/notebooks/Baseline_computation.ipynb
+++ b/notebooks/Baseline_computation.ipynb
@@ -10,6 +10,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "b00c6428",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from favorita import functions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "5cf00c75",
    "metadata": {},
@@ -1468,7 +1478,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit ('shims')",
+   "display_name": "Python 3.10.6 64-bit ('favorita')",
    "language": "python",
    "name": "python3"
   },
@@ -1528,7 +1538,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "2ab62af8896b2d97e50e5f41082653da1e00418fd91249c145dbcf05812a8970"
+    "hash": "8a0391eda21aa135ba5b02b4ace97f531e7ba2677142a604d323c7cf6a2b58e6"
    }
   }
  },
