Creation of docker

--- a/notebooks/preprocessing/Dowhy_Inference_Assessment.ipynb
+++ b/notebooks/preprocessing/Dowhy_Inference_Assessment.ipynb
@@ -788,7 +788,7 @@
    "execution_count": 15,
    "id": "af7bf5cf",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
    "execution_count": 21,
    "id": "2104ae34",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
    "execution_count": 22,
    "id": "13e24f26",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
